alignment issue solved

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,7 +27,7 @@ textarea {
   font-size: 19px;
 }
 
-.header {
+.topbar {
   position: fixed;
   width: 100%;
   top: 0;
@@ -65,6 +65,7 @@ textarea {
   justify-content: space-around;
   width: 95%;
   margin: 0 auto;
+  text-align: center;
 }
 .disc-wave {
   position: relative;
@@ -98,8 +99,8 @@ textarea {
 
 .glow-on-hover {
   position: relative;
-  width: 270px;
-  height: 270px;
+  width: 10em;
+  height: 10em;
     border-radius: 50%;
     border: none;
     outline: none;
